update put api
